# src/firecracker/src/api_server/request/snapshot.rs
@@ -112,7 +112,6 @@ fn parse_put_snapshot_load(body: &Body) -> Result<ParsedRequest, RequestError> {
         network_overrides: snapshot_config.network_overrides,
         vsock_override: snapshot_config.vsock_override,
         clock_realtime: snapshot_config.clock_realtime,
-        shared: snapshot_config.shared,
         uffd_base_file: snapshot_config.uffd_base_file,
     };
 
@@ -211,7 +210,6 @@ mod tests {
             network_overrides: vec![],
             vsock_override: None,
             clock_realtime: false,
-            shared: false,
             uffd_base_file: None,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
@@ -245,7 +243,6 @@ mod tests {
             network_overrides: vec![],
             vsock_override: None,
             clock_realtime: false,
-            shared: false,
             uffd_base_file: None,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
@@ -279,7 +276,6 @@ mod tests {
             network_overrides: vec![],
             vsock_override: None,
             clock_realtime: false,
-            shared: false,
             uffd_base_file: None,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
@@ -322,7 +318,6 @@ mod tests {
             }],
             vsock_override: None,
             clock_realtime: false,
-            shared: false,
             uffd_base_file: None,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
@@ -353,7 +348,6 @@ mod tests {
             network_overrides: vec![],
             vsock_override: None,
             clock_realtime: false,
-            shared: false,
             uffd_base_file: None,
         };
         let parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
